Tests/Lexer_Parser_Tests/Fails/Function_Immutability.bbgm
# Fail due to immutable outputs (not supported)
recipe: HelloWorld() <$sugar, kcal b, carb> {
    pop "hello"
    pop "!" => 2
    pop "world" => b
}
